--- a/test/public/index.html
+++ b/test/public/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Kendo UI multi calendar example</title>
+  <title></title>
   <link href="http://kendo.cdn.telerik.com/2016.1.412/styles/kendo.common.min.css" rel="stylesheet">
   <link href="http://kendo.cdn.telerik.com/2016.1.412/styles/kendo.default.min.css" rel="stylesheet">
 </head>
@@ -12,12 +12,5 @@
   <script src="http://kendo.cdn.telerik.com/2016.1.412/js/jquery.min.js"></script>
   <script src="http://kendo.cdn.telerik.com/2016.1.412/js/kendo.ui.core.min.js"></script>
   <script src="kendo-multi-calendar.js"></script>
-  <script>
-    $(function () {
-      $('#multi-cal').kendoMultiCalendar({
-        values: [new Date()]
-      });
-    });
-  </script>
 </body>
 </html>
