--- a/test/public/index.html
+++ b/test/public/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title></title>
-  <link href="http://kendo.cdn.telerik.com/2016.1.412/styles/kendo.common.min.css" rel="stylesheet">
-  <link href="http://kendo.cdn.telerik.com/2016.1.412/styles/kendo.default.min.css" rel="stylesheet">
+  <link href="https://kendo.cdn.telerik.com/2016.1.412/styles/kendo.common.min.css" rel="stylesheet">
+  <link href="https://kendo.cdn.telerik.com/2016.1.412/styles/kendo.default.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="multi-cal"></div>
 
-  <script src="http://kendo.cdn.telerik.com/2016.1.412/js/jquery.min.js"></script>
-  <script src="http://kendo.cdn.telerik.com/2016.1.412/js/kendo.ui.core.min.js"></script>
+  <script src="https://kendo.cdn.telerik.com/2016.1.412/js/jquery.min.js"></script>
+  <script src="https://kendo.cdn.telerik.com/2016.1.412/js/kendo.ui.core.min.js"></script>
   <script src="kendo-multi-calendar.js"></script>
 </body>
 </html>
