--- a/index.html
+++ b/index.html
@@ -13,8 +13,9 @@
   <script src="https://kendo.cdn.telerik.com/2016.1.412/js/kendo.ui.core.min.js"></script>
   <script src="dist/kendo-multi-calendar.js"></script>
   <script>
+    var c; 
     $(function () {
-      $('#multi-cal').kendoMultiCalendar({
+      c = $('#multi-cal').kendoMultiCalendar({
         values: [new Date()]
       }).data('kendoMultiCalendar');
     });
