min version for deploy

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
 
   <script src="https://kendo.cdn.telerik.com/2016.3.1118/js/jquery.min.js"></script>
   <script src="https://kendo.cdn.telerik.com/2016.3.1118/js/kendo.ui.core.min.js"></script>
-  <script src="kendo-multi-calendar.js"></script>
+  <script src="kendo-multi-calendar.min.js"></script>
   <script>
     var multiCalendar = $('#multi-cal').kendoMultiCalendar({
       values: [new Date()]
