--- a/tests/index.html
+++ b/tests/index.html
@@ -11,6 +11,6 @@
 
   <script src="https://kendo.cdn.telerik.com/2016.3.1118/js/jquery.min.js"></script>
   <script src="https://kendo.cdn.telerik.com/2016.3.1118/js/kendo.ui.core.min.js"></script>
-  <script src="../../dist/kendo-multi-calendar.js"></script>
+  <script src="../kendo-multi-calendar.js"></script>
 </body>
 </html>
