--- a/public/index.html
+++ b/public/index.html
@@ -3,14 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>kendo-multi-calendar</title>
-  <link href="https://kendo.cdn.telerik.com/2016.3.1118/styles/kendo.common.min.css" rel="stylesheet">
-  <link href="https://kendo.cdn.telerik.com/2016.3.1118/styles/kendo.default.min.css" rel="stylesheet">
+  <link href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.common.min.css" rel="stylesheet">
+  <link href="https://kendo.cdn.telerik.com/2017.2.621/styles/kendo.default.min.css" rel="stylesheet">
 </head>
 <body>
   <div id="multi-cal"></div>
 
-  <script src="https://kendo.cdn.telerik.com/2016.3.1118/js/jquery.min.js"></script>
-  <script src="https://kendo.cdn.telerik.com/2016.3.1118/js/kendo.ui.core.min.js"></script>
+  <script src="http://code.jquery.com/jquery-1.12.3.min.js"></script>
+  <script src="https://kendo.cdn.telerik.com/2017.2.621/js/kendo.ui.core.min.js"></script>
   <script src="kendo-multi-calendar.min.js"></script>
   <script>
     var multiCalendar = $('#multi-cal').kendoMultiCalendar({
