updated intern to v4

--- a/tests/index.html
+++ b/tests/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="multi-cal"></div>
 
-  <script src="http://code.jquery.com/jquery-1.12.3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
   <script src="https://kendo.cdn.telerik.com/2018.1.221/js/kendo.ui.core.min.js"></script>
   <script src="../kendo-multi-calendar.js"></script>
 </body>
