--- a/public/index.html
+++ b/public/index.html
@@ -9,7 +9,7 @@
 <body>
   <div id="multi-cal"></div>
 
-  <script src="http://code.jquery.com/jquery-1.12.3.min.js"></script>
+  <script src="https://code.jquery.com/jquery-1.12.3.min.js"></script>
   <script src="https://kendo.cdn.telerik.com/2018.1.221/js/kendo.all.min.js"></script>
   <script src="kendo-multi-calendar.min.js"></script>
   <script>
